add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                 background: rgb(255,250,250);
                 color: rgb(255,250,250);
                 padding: 10px;
-                font-family: arial;
+                font-family: Old English Text MT;
             }
             header {
                 font-size: 1.5em;
@@ -86,9 +86,10 @@
                     <section class="interests">
                         <header>Interests</header>
                         <ul>
-                            <li>Assassins Creed</li>
-                            <li>Dodges</li>
+                            <li>Assassin's Creed</li>
+                            <li>Dodge</li>
                             <li>Video Games</li>
+                            <li>Computers</li>
                         </ul>
                     </section>
                 </div>
