--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,10 @@
         <title>Riley's First Website</title>
             <style type="text/css">
             body {
-                background: rgb(125, 198, 205);
-                color: rgb(45, 45, 45);
+                background: rgb(255, 250, 250);
+                color: rgb(255, 250, 250);
                 padding: 10px;
-                font-family: arial;
+                font-family: Old English Text MT;
             }
             header {
                 font-size: 1.5em;
@@ -23,7 +23,7 @@
     
             /* navigation menu */
             nav {
-                background: rgb(239, 80, 41);
+                background: rgb(255, 0, 0);
                 margin: 0 auto;
                 display: flex;
                 padding: 10px;
@@ -31,7 +31,7 @@
             nav header {
                 display: flex;
                 align-items: center;
-                color: rgb(255, 255, 255);
+                color: rgb(255, 250, 250);
                 flex: 1;
             }
             nav ul {
@@ -48,7 +48,7 @@
     
             /* main container area beneath menu */
             main {
-                background: rgb(245, 238, 219);
+                background: rgb(0, 0, 139);
                 display: flex;
             }
             .content {
